apicast-prod/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-23T15:42:58Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: apicast-live-prod
    namespace: apicast-prod
    resourceVersion: "476624882"
    uid: 877cebc1-bfc2-42dd-b580-cdf3a34cbee9
  subsets:
  - addresses:
    - ip: 10.130.20.253
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: apicast-live-prod-4-r7vkf
        namespace: apicast-prod
        resourceVersion: "476624880"
        uid: 464790a4-dd65-4064-bdca-f593a909ff4f
    ports:
    - name: management
      port: 8090
      protocol: TCP
    - name: proxy
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-23T15:42:58Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: apicast-staging-prod
    namespace: apicast-prod
    resourceVersion: "491646491"
    uid: 4f60bb7b-8aad-439f-aa14-ee20e12dd884
  subsets:
  - addresses:
    - ip: 10.131.19.164
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: apicast-staging-prod-6-vk79k
        namespace: apicast-prod
        resourceVersion: "491646489"
        uid: b90a64aa-622b-490e-8891-b297f7ffdc5b
    ports:
    - name: management
      port: 8090
      protocol: TCP
    - name: proxy
      port: 8080
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
