apicast-prod/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.20.253
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: apicast-live-prod-4-r7vkf
      namespace: apicast-prod
      resourceVersion: "476624880"
      uid: 464790a4-dd65-4064-bdca-f593a909ff4f
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-23T15:42:58Z"
    generateName: apicast-live-prod-
    generation: 42
    labels:
      app: 3scale-gateway
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: apicast-live-prod
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: apicast-live-prod-jg7zl
    namespace: apicast-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: apicast-live-prod
      uid: 9b754307-1943-4659-b58b-57e7ed1a0b2d
    resourceVersion: "476624883"
    uid: f2a4d4d6-7071-4ecd-92f8-0f100ebf58b1
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
  - name: management
    port: 8090
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.19.164
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
    targetRef:
      kind: Pod
      name: apicast-staging-prod-6-vk79k
      namespace: apicast-prod
      resourceVersion: "491646489"
      uid: b90a64aa-622b-490e-8891-b297f7ffdc5b
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-23T15:42:58Z"
    generateName: apicast-staging-prod-
    generation: 73
    labels:
      app: 3scale-gateway
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: apicast-staging-prod
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: apicast-staging-prod-2fl94
    namespace: apicast-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: apicast-staging-prod
      uid: 6b5d5b9e-4875-404b-b949-9972863550b0
    resourceVersion: "491646490"
    uid: e8be4a1e-e84f-4094-b598-ba6a1add431e
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
  - name: management
    port: 8090
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
