apicast-prod/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
    creationTimestamp: "2023-05-23T15:42:58Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: libroremuneraciones-live
    namespace: apicast-prod
    resourceVersion: "94834913"
    uid: 57545781-a149-4ecd-8167-2785c6cc3e12
  spec:
    host: libroremuneraciones.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAJLy5hrt7Truc+XSi/n97mcwDQYJKoZIhvcNAQELBQAw
[...]
        655JZ9QJJBjMJu/Yh4OJCXWhUGERGto=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAmDtA8UoGIfUp1zqz1tyTawc8+2BMCXG8E+7qe6R5KsGdb6Yu
[...]
        bWgrxYHvPhobw41zEhGif6YXMgUvkqVH7YXaoh9CEMzNz/3OEAOEug==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-prod
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T17:31:27Z"
        status: "True"
        type: Admitted
      host: libroremuneraciones.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
    creationTimestamp: "2023-05-23T15:42:58Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: libroremuneraciones-stagging
    namespace: apicast-prod
    resourceVersion: "94857183"
    uid: edec47f4-a0e0-484a-989a-ff2d05450b80
  spec:
    host: libroremuneraciones-stagging-prod.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAJLy5hrt7Truc+XSi/n97mcwDQYJKoZIhvcNAQELBQAw
[...]
        655JZ9QJJBjMJu/Yh4OJCXWhUGERGto=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAmDtA8UoGIfUp1zqz1tyTawc8+2BMCXG8E+7qe6R5KsGdb6Yu
[...]
        bWgrxYHvPhobw41zEhGif6YXMgUvkqVH7YXaoh9CEMzNz/3OEAOEug==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-prod
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:42:58Z"
        status: "True"
        type: Admitted
      host: libroremuneraciones-stagging-prod.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-23T15:42:58Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: lre-proxy-live
    namespace: apicast-prod
    resourceVersion: "94844453"
    uid: fc9a9fbc-b54b-4571-a337-05f62162420b
  spec:
    host: lre-proxy.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAJLy5hrt7Truc+XSi/n97mcwDQYJKoZIhvcNAQELBQAw
[...]
        655JZ9QJJBjMJu/Yh4OJCXWhUGERGto=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAmDtA8UoGIfUp1zqz1tyTawc8+2BMCXG8E+7qe6R5KsGdb6Yu
[...]
        bWgrxYHvPhobw41zEhGif6YXMgUvkqVH7YXaoh9CEMzNz/3OEAOEug==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-prod
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T18:48:05Z"
        status: "True"
        type: Admitted
      host: lre-proxy.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-23T15:42:58Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: lre-proxy-stagging
    namespace: apicast-prod
    resourceVersion: "474198457"
    uid: 978c4978-533f-4cf9-b6f8-7319782070d5
  spec:
    host: lre-proxy-stagging-prod.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-prod
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-23T15:42:58Z"
        status: "True"
        type: Admitted
      host: lre-proxy-stagging-prod.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
      haproxy.router.openshift.io/timeout: 300s
    creationTimestamp: "2023-05-23T15:42:58Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: lre-services-live
    namespace: apicast-prod
    resourceVersion: "94851005"
    uid: e60ffd1b-99d1-4d90-a9d4-8c9cd75cf3fa
  spec:
    host: lre-services.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      certificate: "-----BEGIN CERTIFICATE-----\nMIIHAzCCBeugAwIBAgIRAJLy5hrt7Truc+XSi/n97mcwDQYJKoZIhvcNAQELBQAw\ngZUxCzAJBgNVBAYTAkdCMRswGQYDVQQIExJHcmVhdGVyIE1hbmNoZXN0ZXIxEDAO\nBgNVBAcTB1NhbGZvcmQxGDAWBgNVBAoTD1NlY3RpZ28gTGltaXRlZDE9MDsGA1UE\nAxM0U2VjdGlnbyBSU0EgT3JnYW5pemF0aW9uIFZhbGlkYXRpb24gU2VjdXJlIFNl\ncnZlciBDQTAeFw0yMzA4MTYwMDAwMDBaFw0yNDA5MTUyMzU5NTlaMHwxCzAJBgNV\nBAYTAkNMMSowKAYDVQQIDCFSZWdpw7NuIE1ldHJvcG9saXRhbmEgZGUgU2FudGlh\nZ28xJjAkBgNVBAoTHURpcmVjY2lvbiBHZW5lcmFsIGRlbCBUcmFiYWp [...]
        CERTIFICATE----- \n"
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAmDtA8UoGIfUp1zqz1tyTawc8+2BMCXG8E+7qe6R5KsGdb6Yu
[...]
        bWgrxYHvPhobw41zEhGif6YXMgUvkqVH7YXaoh9CEMzNz/3OEAOEug==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-prod
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T18:58:36Z"
        status: "True"
        type: Admitted
      host: lre-services.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
    creationTimestamp: "2023-05-23T15:42:58Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: d7f82f83-36b7-40cb-9be8-845686ebb478
      migration.openshift.io/migrated-by-migplan: 1981d423-880a-454f-b775-1c317fd4855d
      velero.io/backup-name: migration-685ab-initial-9hwzb
      velero.io/restore-name: migration-685ab-final-dbsdc
    name: lre-services-stagging
    namespace: apicast-prod
    resourceVersion: "94865856"
    uid: 3a188653-7de8-4258-8a4e-d5f3ff75e6f8
  spec:
    host: lre-services-stagging-prod.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAJLy5hrt7Truc+XSi/n97mcwDQYJKoZIhvcNAQELBQAw
[...]
        655JZ9QJJBjMJu/Yh4OJCXWhUGERGto=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAmDtA8UoGIfUp1zqz1tyTawc8+2BMCXG8E+7qe6R5KsGdb6Yu
[...]
        bWgrxYHvPhobw41zEhGif6YXMgUvkqVH7YXaoh9CEMzNz/3OEAOEug==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-prod
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T19:23:37Z"
        status: "True"
        type: Admitted
      host: lre-services-stagging-prod.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
